--- a/package.json
+++ b/package.json
@@ -7,38 +7,24 @@
         "npm": ">=6.14.14"
     },
     "scripts": {
-        "start": "gulp",
-        "build": "gulp build"
+        "start": "node server.js",
+        "server": "nodemon  ./server/index.js",
+        "dev": "concurrently \"npm run server\" \"npm run start --prefix client\""
     },
-    "author": "Mixail",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/fatalms/tensor.git"
+    },
+    "author": "Mikhail",
     "license": "ISC",
-    "dependencies": {},
+    "bugs": {
+        "url": "https://github.com/fatalms/tensor/issues"
+    },
+    "homepage": "https://github.com/fatalms/tensor#readme",
     "devDependencies": {
-        "@babel/core": "^7.15.0",
-        "browser-sync": "^2.27.5",
-        "del": "^6.0.0",
-        "gulp": "^4.0.2",
-        "gulp-autoprefixer": "^8.0.0",
-        "gulp-better-rollup": "^4.0.1",
-        "gulp-clean-css": "^4.3.0",
-        "gulp-file-include": "^2.3.0",
-        "gulp-fonter": ">=0.3.0",
-        "gulp-group-css-media-queries": "^1.2.2",
-        "gulp-imagemin": "^7.1.0",
-        "gulp-newer": "^1.4.0",
-        "gulp-plumber": "^1.2.1",
-        "gulp-rename": "^2.0.0",
-        "gulp-sass": "^5.0.0",
-        "gulp-sourcemaps": "^3.0.0",
-        "gulp-ttf2woff": "^1.1.1",
-        "gulp-ttf2woff2": "^4.0.1",
-        "gulp-uglify-es": "^3.0.0",
-        "gulp-watch": "^5.0.1",
-        "rollup": "^2.56.2",
-        "rollup-plugin-babel": "^4.4.0",
-        "rollup-plugin-commonjs": "^10.1.0",
-        "rollup-plugin-node-resolve": "^5.2.0",
-        "sass": "1.37.5",
-        "transform-runtime": "^0.0.0"
+        "concurrently": "^6.2.2",
+        "cors": "^2.8.5",
+        "express": "^4.17.1",
+        "nodemon": "^2.0.13"
     }
 }
